<resources>
    <string name="app_name">Chatr</string>

    <!-- Login/Register -->
    <string name="title_login">Log In</string>
    <string name="action_login_short">Log in</string>
    <string name="action_register_short">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="title_create_account">Create Account</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_username">Username</string>

    <string name="switch_stay_logged">Stay Logged in</string>
    <string name="keys_shared_prefs">Chatr Shared Prefs</string>
    <string name="keys_prefs_jwt">Shared Prefs JWT</string>
    <string name="action_log_out">Log Out</string>

    <string name="error_first_name">Please enter a valid name</string>
    <string name="error_last_name">Please enter a valid name</string>
    <string name="error_username">Please enter a valid username</string>
    <string name="error_email">Please enter a valid email</string>
    <string name="error_password">Please enter a valid password</string>

    <string name="error_username_exists">Username is taken</string>
    <string name="error_email_exists">Account already exists</string>

    <string name="button_to_login">@string/action_login_short</string>
    <string name="button_register_next">Next</string>

    <string name="title_create_pass">Create a Password</string>
    <string name="title_pass_reqs">Password Requirements</string>
    <string name="label_pass_length">Length</string>
    <string name="label_pass_lowercase">Lowercase letter</string>
    <string name="label_pass_uppercase">Uppercase letter</string>
    <string name="label_pass_number">Number</string>
    <string name="label_pass_special">Special character</string>
    <string name="label_pass_match">Passwords match</string>

    <string name="hint_password_reenter">Re-enter password</string>
    <string name="button_create_account">Create account</string>


    <string name="title_weather">Weather</string>
    <string name="title_daily_forecast">Daily Forecast</string>
    <string name="title_hourly_forecast">Hourly Forecast</string>
    <string name="title_current_location">Current Location</string>

    <!-- Nav Destinations/Fragment names -->
    <string name="nav_weather">Weather</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_home">Home</string>
    <string name="nav_contacts">Contacts</string>

    <string name="action_new_chat">NEW CHAT</string>
    <string name="chat_main_title"> Chat</string>
    <string name="chat_create_title">Create New Chat Room</string>
    <string name="hint_chat_name">Enter chat name</string>
    <string name="chat_add_contacts">Add Contacts</string>
    <string name="hint_type_chat">Type a message</string>
    <string name="action_send_chat">Send</string>
    <string name="chat_text">Can change text.Can change text.Can change text.Can change text.Can change textCan change text.Can change text.Can change text.Can change text.Can change textCan change text.Can change text.Can change text.Can change text.Can change text</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="sender_name">Sender Name</string>
    <string name="chat_time">9:00am</string>
    <string name="image_user">image of user</string>
    <string name="chat_name">Get chat name</string>
    <string name="chat_members">chat members:</string>
    <string name="chat_room_name_default">CHAT ROOM</string>
    <string name="chat_room_message_default">No message</string>
    <string name="action_create_chat">CREATE</string>
    <string name="action_cancel_chat">CANCEL</string>

    <string name="hello_blank_fragment">Home Fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hint_location">Search location</string>
    <string name="hint_save_location">Save Location</string>
    <string name="hint_list_locations">List saved locations</string>
    <string name="hint_open_location">Open location search</string>
    <string name="hint_current_location">View current location</string>
    <string name="keys_json_forecast_state">state</string>
    <string name="keys_json_forecast_forecast">forecast</string>
    <string name="keys_json_forecast_daily">forecast</string>
    <string name="keys_json_forecast_hourly">hourlyForecast</string>
    <string name="keys_json_forecast_daily_day">day</string>
    <string name="keys_json_forecast_daily_temperature_high">temperatureHigh</string>
    <string name="keys_json_forecast_daily_temperature_low">temperatureLow</string>
    <string name="keys_json_forecast_daily_temperature_unit">temperatureUnit</string>
    <string name="keys_json_forecast_daily_short_forecast">shortForecast</string>
    <string name="keys_json_forecast_hourly_time">time</string>
    <string name="keys_json_forecast_hourly_is_daytime">isDaytime</string>
    <string name="keys_json_forecast_hourly_temperature">temperature</string>
    <string name="keys_json_forecast_hourly_temperature_unit">temperatureUnit</string>
    <string name="keys_json_forecast_hourly_short_forecast">shortForecast</string>
    <string name="keys_json_location_list">locations</string>
    <string name="keys_json_location_primarykey">primarykey</string>
    <string name="keys_json_location_memberid">memberid</string>
    <string name="keys_json_location_nickname">nickname</string>
    <string name="keys_json_location_latitude">lat</string>
    <string name="keys_json_location_longitude">long</string>
    <string name="title_version">Version </string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_settings_theme">Theme</string>
    <string name="title_settings_theme_sky">Sky</string>
    <string name="title_settings_theme_evening">Evening</string>
    <string name="description_settings_theme">Alter the appearance of color</string>
    <string name="title_settings_account">Account</string>
    <string name="description_settings_account">Manage your account</string>
    <string name="title_clear_locations">Clear saved locations</string>
    <string name="title_change_password">Change password</string>
</resources>