<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/layout_root"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.auth.register.RegisterPasswordFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/title_create_pass"
        android:textColor="@color/primary_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_password_reqs"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_create_account">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_passreqs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_pass_reqs"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_pass_length"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_check_circle_grey_24dp"
                app:layout_constraintStart_toStartOf="@+id/text_passreqs"
                app:layout_constraintTop_toBottomOf="@+id/text_passreqs" />

            <TextView
                android:id="@+id/text_length_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_pass_length"
                app:layout_constraintBottom_toBottomOf="@+id/icon_pass_length"
                app:layout_constraintStart_toEndOf="@+id/icon_pass_length"
                app:layout_constraintTop_toTopOf="@+id/icon_pass_length" />

            <ImageView
                android:id="@+id/icon_pass_lowercase"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_check_circle_grey_24dp"
                app:layout_constraintStart_toStartOf="@+id/text_passreqs"
                app:layout_constraintTop_toBottomOf="@+id/icon_pass_length" />

            <TextView
                android:id="@+id/text_lowercase_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_pass_lowercase"
                app:layout_constraintBottom_toBottomOf="@+id/icon_pass_lowercase"
                app:layout_constraintStart_toEndOf="@+id/icon_pass_lowercase"
                app:layout_constraintTop_toTopOf="@+id/icon_pass_lowercase" />

            <ImageView
                android:id="@+id/icon_pass_uppercase"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_check_circle_grey_24dp"
                app:layout_constraintStart_toStartOf="@+id/text_passreqs"
                app:layout_constraintTop_toBottomOf="@+id/icon_pass_lowercase" />

            <TextView
                android:id="@+id/text_uppercase_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_pass_uppercase"
                app:layout_constraintBottom_toBottomOf="@+id/icon_pass_uppercase"
                app:layout_constraintStart_toEndOf="@+id/icon_pass_uppercase"
                app:layout_constraintTop_toTopOf="@+id/icon_pass_uppercase" />

            <ImageView
                android:id="@+id/icon_pass_number"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_check_circle_grey_24dp"
                app:layout_constraintStart_toStartOf="@+id/text_passreqs"
                app:layout_constraintTop_toBottomOf="@+id/icon_pass_uppercase" />

            <TextView
                android:id="@+id/text_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_pass_number"
                app:layout_constraintBottom_toBottomOf="@+id/icon_pass_number"
                app:layout_constraintStart_toEndOf="@+id/icon_pass_number"
                app:layout_constraintTop_toTopOf="@+id/icon_pass_number" />

            <ImageView
                android:id="@+id/icon_pass_special"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_check_circle_grey_24dp"
                app:layout_constraintStart_toStartOf="@+id/text_passreqs"
                app:layout_constraintTop_toBottomOf="@+id/icon_pass_number" />

            <TextView
                android:id="@+id/text_special_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_pass_special"
                app:layout_constraintBottom_toBottomOf="@+id/icon_pass_special"
                app:layout_constraintStart_toEndOf="@+id/icon_pass_special"
                app:layout_constraintTop_toTopOf="@+id/icon_pass_special" />

            <ImageView
                android:id="@+id/icon_pass_match"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_check_circle_grey_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_passreqs"
                app:layout_constraintTop_toBottomOf="@+id/icon_pass_special" />

            <TextView
                android:id="@+id/text_match_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_pass_match"
                app:layout_constraintBottom_toBottomOf="@+id/icon_pass_match"
                app:layout_constraintStart_toEndOf="@+id/icon_pass_match"
                app:layout_constraintTop_toTopOf="@+id/icon_pass_match" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_password_reqs">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_passwordreenter_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_password_reenter"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/edit_password_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_password_layout"
        app:layout_constraintTop_toBottomOf="@id/edit_password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_passwordreenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:text="@string/button_create_account"
        android:textAppearance="@style/Widget.Material3.Button"
        android:textSize="14sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_passwordreenter_layout"
        app:layout_constraintStart_toStartOf="@+id/edit_passwordreenter_layout"
        app:layout_constraintTop_toBottomOf="@+id/edit_passwordreenter_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>



