<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sender_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/sender_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sender_name"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/sender_chat_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        app:cardBackgroundColor="?colorPrimary"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toStartOf="@+id/sender_user_image"
        app:layout_constraintTop_toBottomOf="@id/sender_name">

        <TextView
            android:id="@+id/sender_chat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:maxWidth="250dp"
            android:padding="6dp"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/sender_user_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_person_onsurface_24dp"
        android:contentDescription="@string/image_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sender_name" />


    <TextView
        android:id="@+id/sender_chat_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/chat_time"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sender_user_image"
        app:layout_constraintStart_toStartOf="@+id/sender_user_image"
        app:layout_constraintTop_toBottomOf="@+id/sender_chat_container" />

</androidx.constraintlayout.widget.ConstraintLayout>